<resources>
    <string name="app_name">Hitokoto</string>
    <string name="default_temp" translatable="false">{"id": "23333","hitokoto": "小部件出现问题……","type": "e","from": "开发者","creator": "开发者","cearted_at": null}</string>
    <string name="network_error" translatable="false">{"id": "23333","hitokoto": "网络连接异常……","type": "e","from": "开发者","creator": "开发者","cearted_at": null}</string>
    <string name="json_example" translatable="false">{\n\t"id": "1148",\n\t"hitokoto": "你说最开心的是你，我说最难过的是你……",\n\t"type": "e",\n\t"from": "原创",\n\t"creator": "Mystery0",\n\t"create_at": null\n}</string>
    <string name="e_mail_address" translatable="false">mystery0dyl520@gmail.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_manager_hitokoto">LocalGroupManager</string>
    <string name="title_activity_custom_hitokoto">LocalHitokoto</string>
    <string name="title_activity_custom_source">CustomSource</string>
    <string name="title_activity_download">Download</string>

    <string name="sharedPreferencesName" translatable="false">Hitokoto</string>
    <string name="hitokotoTemp" translatable="false">temp</string>
    <string name="hitokotoConfigEnable" translatable="false">enable</string>
    <string name="hitokotoConfigChooseSource" translatable="false">choose_source</string>
    <string name="hitokotoConfigAutoRefresh" translatable="false">auto_refresh</string>
    <string name="hitokotoConfigClickToRefresh" translatable="false">click_to_refresh</string>
    <string name="hitokotoConfigTextColor" translatable="false">text_color</string>
    <string name="hitokotoConfigTextAligned" translatable="false">text_aligned</string>
    <string name="hitokotoConfigTextSize" translatable="false">text_size</string>
    <string name="hitokotoConfigNotShowSource" translatable="false">not_show_source</string>
    <string name="hitokotoConfigRefreshTime" translatable="false">refresh_time</string>
    <string name="hitokotoConfigTextPadding" translatable="false">text_padding</string>
    <string name="hitokotoIdSet" translatable="false">id_set</string>
    <string name="isDebuggable" translatable="false">isDebuggable</string>

    <string name="hitokoto_object" translatable="false">hitokoto_object</string>

    <string name="request_url" translatable="false">https://sslapi.hitokoto.cn/</string>
    <string name="file_request_url" translatable="false">http://123.206.186.70/hitokoto.php</string>

    <string name="title_data_source">Data Source</string>
    <string name="text_refresh_now">Refresh Now</string>
    <string name="text_show_current">Show Current</string>
    <string name="text_test_source">Test Source</string>
    <string name="text_choose_source">Choose Source</string>

    <string name="title_custom">Custom</string>
    <string name="title_custom_hitokoto">Custom Hitokoto</string>
    <string name="text_custom_single_hitokoto">Add Single Hitokoto</string>
    <string name="text_custom_multiple_hitokoto">Add Multiple Hitokoto</string>
    <string name="text_custom_show_hitokoto">Show Custom Hitokoto</string>
    <string name="text_custom_add_group">Add new group</string>
    <string name="text_custom_hitokoto_export">Export Hitokotos</string>
    <string name="text_custom_hitokoto_import">Import Hitokotos</string>
    <string name="text_custom_hitokoto_upload">Upload Hitokotos</string>
    <string name="text_custom_hitokoto_download">Download Hitokotos</string>
    <string name="title_custom_source">Custom Source</string>
    <string name="text_custom_source_new">Add Source</string>
    <string name="text_custom_source_manager">Source Manager</string>
    <string name="text_custom_source_helper">Custom Source Help</string>

    <string name="title_widget_settings">Widget Settings</string>
    <string name="text_auto_refresh">Auto Refresh</string>
    <string name="text_click_to_refresh">Click To Refresh</string>
    <string name="text_refresh_time">Set Refresh Time (Min)</string>
    <string name="text_text_padding">Text Padding</string>
    <string name="text_text_color">Text Color</string>
    <string name="text_text_aligned">Text Aligned</string>
    <string name="text_text_size">Text Size</string>

    <string name="title_advance">Advance Setting</string>
    <string name="text_not_show_source">Don\'t Show Source</string>

    <string name="title_info">Info</string>
    <string name="text_open_resource">Resource Address</string>
    <string name="text_about">About</string>

    <string name="text_developer">Developer</string>
    <string name="summary_developer" translatable="false">Mystery0</string>
    <string name="text_show_crash">Show Crash Log</string>
    <string name="text_contact_me">Contact Me</string>
    <string name="summary_contact_me">Please Send E-mail</string>
    <string name="text_how_to_use">How to use</string>

    <string name="title_developer_options">Developer Options</string>
    <string name="text_debug">Debugger</string>
    <string name="summary_debug">This will produce a lot of log files!</string>

    <string name="hint_permission">Please grant the permission</string>
    <string name="hint_refresh_time">Please Enter Time (Min)</string>
    <string name="hint_text_size">Please Enter Number</string>
    <string name="hint_broadcast">The Broadcast Send! </string>
    <string name="hint_add_widget">Please Add Widget First! </string>
    <string name="hint_copy_address">The E-mail Address is copied! </string>
    <string name="hint_copy_text">The Text is copied! </string>
    <string name="hint_custom_content">Please Enter the content of Hitokoto</string>
    <string name="hint_custom_source">Please Enter the source of Hitokoto</string>
    <string name="hint_custom_group">Please choose the group of Hitokoto</string>
    <string name="hint_custom_multiple">Please Enter Hitokotos</string>
    <string name="hint_save_custom_done">The Hitokoto Saved! </string>
    <string name="hint_text_custom">Intervals with a space between the text and sources.\nEach row represents a Hitokoto.</string>
    <string name="hint_update_time">Update Time: </string>
    <string name="hint_title_edit_hitokoto">Edit</string>
    <string name="hint_show_current">Long press text to copy! </string>
    <string name="hint_show_hitokoto">Right slide delete entry! </string>
    <string name="hint_network_error">Network Error! </string>
    <string name="hint_null_data">There is no data! </string>
    <string name="hint_custom_source_name">Please Enter the name of source</string>
    <string name="hint_custom_source_address">Please Enter the address of source</string>
    <string name="hint_custom_source_request_method">Request Method:</string>
    <string name="hint_custom_source_content">Content Key</string>
    <string name="hint_custom_source_from">From Key</string>
    <string name="hint_invalid_source">Invalid Source! </string>
    <string name="hint_custom_add_source_done">The Source Saved!</string>
    <string name="hint_custom_add_source_error">Something Error!&#62;_&#60;</string>
    <string name="hint_custom_source_helper_text1">The Custom Source function requires the user to understand the basic json format. \nHere is a json data example, please make sure the source you provide to return the json data.</string>
    <string name="hint_custom_source_helper_text2">It is necessary to provide APP with the \'content key\' and \'source key\' of Hitokoto, and in this example is \'hitokoto\' and \'from\'.</string>
    <string name="hint_export_error">Unknown Error! </string>
    <string name="hint_export_success">The data has been exported! \nThe path is </string>
    <string name="hint_import_error">Damaged file! Please check the file content! </string>
    <string name="hint_import_success">The hitokotos has been imported! </string>
    <string name="hint_choose_group">Please choose groups to upload</string>
    <string name="hint_upload_progress_title">Uploading……</string>
    <string name="hint_upload_progress_message">uploading：</string>
    <string name="hint_upload_done">Upload success! </string>
    <string name="hint_refresh_done">Refresh Done! </string>
    <string name="hint_download_progress_message">Downloading……</string>
    <string name="hint_download_progress_message_hint">Current speed:</string>
    <string name="hint_download_done">Download Success! </string>
    <string name="hint_error_network">NetWork error! </string>
    <string name="hint_download_sure">Are you sure you want to download this file?</string>
    <string name="hint_how_to_add_widget">Long press the desktop and add the widget named Hitokoto to use widget.</string>
    <string name="hint_how_to_refresh_text">If you want to refresh the current sentence, please click the sentence ( you must open the \"Click To Refresh\" first )! You can also open the \"Auto Refresh\" to do this! (Both \"Click To Refresh\" and \"Auto Refresh\" are opened by default)</string>
    <string name="hint_how_to_download">In \"Custom Hitokoto/Download Hitokotos\", you can download the hitokoto files which someone upload to the cloud. Well, I\'ll do all things for you!</string>
    <string name="hint_how_to_upload">You can also upload your own files to download! Just use Custom Hitokoto/Upload Hitokotos!</string>

    <string name="ErrorRefreshTime">Please ensure the time is more than 0 </string>
    <string name="ErrorNull">Text Can\'t be Null! </string>
    <string name="ErrorFormat">Error Format!</string>
    <string name="ErrorData">Error Data! Please Check the Text! </string>

    <string name="unavailable_now">Unavailable Now!</string>

    <string name="add_widget">Add widget</string>

    <string name="Test">Test</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Status">Status</string>
    <string name="Wait">Wait</string>
    <string name="Enable">Enable</string>
    <string name="Disable">Disable</string>
    <string name="Custom">Custom</string>
    <string name="Local">Local</string>
    <string name="Unclassified">Unclassified</string>
    <string name="Search">Search</string>
    <string name="unclassified" translatable="false">unclassified</string>

    <!--List Aligned-->
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>

    <!--List Source-->
    <string name="list_source_a">Animation</string>
    <string name="list_source_b">Comics</string>
    <string name="list_source_c">Game</string>
    <string name="list_source_d">Fiction</string>
    <string name="list_source_e">Original</string>
    <string name="list_source_f">Internet</string>
    <string name="list_source_g">Other</string>
    <string name="list_source_h">Local</string>
    <string name="list_source_i">Custom Source</string>

    <!--List Source Type-->
    <string name="list_source_type_online" translatable="false">online</string>
    <string name="list_source_type_local" translatable="false">local</string>
    <string name="list_source_type_custom" translatable="false">custom</string>

    <!--List Request Method-->
    <string name="list_request_method_get" translatable="false">GET</string>
    <string name="list_request_method_post" translatable="false">POST</string>
    <string name="Delete">Delete</string>
    <string name="SelectAll">Select All</string>
    <string name="Edit">Edit</string>
    <string name="hint_how_to_resolve_cannot_refresh">If you can\'t refresh text by click the sentence and opened the \"Click To Refresh\", try to remove the widget from your desktop and add the new one.</string>
</resources>
