<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/how_to_use_margin_start_end"
            android:layout_marginStart="@dimen/how_to_use_margin_start_end"
            android:layout_marginTop="@dimen/how_to_use_margin_top"
            android:text="@string/hint_how_to_add_widget"
            android:textSize="@dimen/how_to_use_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/how_to_use_margin_start_end"
            android:layout_marginStart="@dimen/how_to_use_margin_start_end"
            android:layout_marginTop="@dimen/how_to_use_margin_top"
            android:text="@string/hint_how_to_refresh_text"
            android:textSize="@dimen/how_to_use_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/how_to_use_margin_start_end"
            android:layout_marginStart="@dimen/how_to_use_margin_start_end"
            android:layout_marginTop="@dimen/how_to_use_margin_top"
            android:text="@string/hint_how_to_download"
            android:textSize="@dimen/how_to_use_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/how_to_use_margin_start_end"
            android:layout_marginStart="@dimen/how_to_use_margin_start_end"
            android:layout_marginTop="@dimen/how_to_use_margin_top"
            android:text="@string/hint_how_to_upload"
            android:textSize="@dimen/how_to_use_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/how_to_use_margin_start_end"
            android:layout_marginStart="@dimen/how_to_use_margin_start_end"
            android:layout_marginTop="@dimen/how_to_use_margin_top"
            android:text="@string/hint_how_to_resolve_cannot_refresh"
            android:textSize="@dimen/how_to_use_text_size"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
