<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/custom_source_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_custom_source_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/custom_source_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_source_name"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_custom_source_address"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/custom_source_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_source_address"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/custom_source_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_custom_source_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/custom_source_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_custom_source_from"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_below="@id/custom_source_json"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        android:text="@string/hint_custom_source_request_method"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"/>

    <Button
        android:id="@+id/test"
        android:layout_below="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:text="@string/Test"/>

</RelativeLayout>
