<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/item_show_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/custom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_custom_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/custom_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_custom_source"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_source"
        android:text="@string/hint_update_time"/>

    <TextView
        android:id="@+id/custom_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_date"/>

</RelativeLayout>
