<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        android:text="@string/hint_text_custom"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_custom_multiple"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"
        android:text="@string/hint_custom_group"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_marginEnd="@dimen/item_show_margin"
        android:layout_marginStart="@dimen/item_show_margin"
        android:layout_marginTop="@dimen/item_show_margin"/>

</RelativeLayout>
